[package]
name = "nextera_utils"
version = "0.1.12"
edition = "2021"
authors = ["Nyan Lin Soe <nyan.ucsp@gmail.com>"]
description = "Next Era Myanmar Solutions Utilities for Rust"
license = "Apache-2.0"
repository = "https://github.com/Next-Era-Myanmar/nextera_utils"

[dependencies]
argon2 = "0.5.3"
base64 = "0.22.1"
bcrypt = "0.16.0"
chrono = "0.4.39"
jsonwebtoken = "9.3.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.134"
